[package]
name                 = "oro-kernel-arch-x86_64"
version.workspace    = true
description          = "Oro operating system x86_64 architecture kernel implementation"
publish              = false
edition.workspace    = true
authors              = ["Josh Junon (https//github.com/qix-)"]
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
autobins             = false

build = "build.rs"

[features]
default = []

# Forces the kernel to only run on the bootstrap processor,
# regardless of what's in the ACPI tables.
force-singlecore = []

# Prints all supported CPUID fields at boot for each core.
# Considerable logging overhead; each core will wait for
# any other core also trying to dump CPUID information.
# Ignored in release builds.
dump-cpuid = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "oro-kernel-x86_64"
path = "entry.rs"
doc  = false

[dependencies]
oro-kernel.workspace        = true
oro-boot-protocol.workspace = true
oro-kernel-mem.workspace    = true
oro-kernel-macro.workspace  = true
oro-kernel-elf.workspace    = true
oro-debug.workspace         = true
oro-dbgutil.workspace       = true
oro-kernel-acpi.workspace   = true
oro-kernel-sync.workspace   = true
oro.workspace               = true
oro-kernel-pci.workspace    = true
oro-kernel-type.workspace   = true
oro-arch-x86_64.workspace   = true

# Work around non-composability of `test` profile and global allocator conflicts in unit test runner.
[dev-dependencies]
oro-kernel-mem = { workspace = true, features = ["std-alloc"] }

[package.metadata.oro]
requires-arch = ["x86_64"]

[lints]
workspace = true
