[package]
name              = "oro-kernel-macro"
version.workspace = true
description       = "Macros used throughout the Oro kernel project."
publish           = false
edition           = "2024"
authors           = ["Josh Junon (https//github.com/qix-)"]
homepage          = "https://oro.sh"
repository        = "https://github.com/oro-os/kernel"
license           = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-kernel-macro-proc.workspace = true

[lints]
workspace = true
