[package]
name              = "oro-kernel-pci"
version.workspace = true
description       = "PCI support for the Oro kernel"
publish           = false
edition           = "2024"
authors           = ["Josh Junon (https//github.com/qix-)"]
homepage          = "https://oro.sh"
repository        = "https://github.com/oro-os/kernel"
license           = "MPL-2.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
oro-kernel-type.workspace  = true
oro-kernel-macro.workspace = true
